# my_edit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.module.css  App.tsx  index.html  main.js  main.js.bak  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: index.ts
src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx
src/components/Editor/: Editor.module.css  Editor.tsx
src/components/FileSearchOverlay/: FileSearchOverlay.module.css  FileSearchOverlay.tsx
src/components/FindBar/: FindBar.module.css  FindBar.tsx
src/components/Modal/: Modal.module.css  Modal.tsx
src/components/PreviewPanel/: PreviewPanel.module.css  PreviewPanel.tsx
src/components/ShortcutsOverlay/: ShortcutsOverlay.module.css  ShortcutsOverlay.tsx
src/components/Sidebar/: FileTree.tsx  Sidebar.module.css  Sidebar.tsx  SidebarHeader.tsx  TreeItem.tsx
src/components/StatusBar/: StatusBar.module.css  StatusBar.tsx
src/components/TabsBar/: TabContextMenu.module.css  TabContextMenu.tsx  TabsBar.module.css  TabsBar.tsx
src/components/Terminal/: Terminal.module.css  Terminal.tsx  TerminalSession.tsx
src/components/TitleBar/: MenuBar.tsx  TitleBar.tsx  (+1 more)
src/hooks/: useCodeMirror.ts  useDraft.ts  useIPC.ts  useSession.ts  useTauriEvent.ts
src/store/: index.ts
src/styles/: global.css  variables.css
src/types/: index.ts
src/utils/: langUtils.ts  treeUtils.ts
(+2 files in other folders)
